# PoraHobeBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_SPACES.md  config.py  docker-entrypoint.sh  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  script.sh  tailwind.config.js
.github/workflows/: static.yml
api/: frontpage.js  index.html  index.js  redirect.html
app/: __init__.py  auth.py  models.py
app/blueprints/: admin.py  main.py  notes.py
app/templates/: activity.html  base.html  index.html  login.html  my_notes.html  note_edit.html  note_preview.html  note_share.html  notes_list.html  profile.html  upload.html
app/templates/admin/: dashboard.html  note_types.html  notes.html  subjects.html  users.html  verify.html
app/utilities/: helper.py  s3.py
cogs/: notes.py
favicon/: about.txt
migrations/versions/: 247b23aeed89_initial_migration.py
templates/: _navbar.html  _subject_list.html  edit_note.html  form.html  notes_list.html  upload.html  wallpapers.html
utils/: bot.py  database.py  server.py
