[project]
name = "porahobebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "py-cord>=2.6.1",
    "python-dotenv>=1.1.1",
    "readme-md>=2018.11.23",
    "requests>=2.32.4",
    "yt-dlp>=2025.6.30",
]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord" }
