[project]
name = "porahobebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "requests-oauthlib>=1.3.1",
    "oauthlib>=3.2.2",
    "flask-login>=0.6.3",
    "python-dotenv>=1.1.1",
    "flask-dance[sqla]>=7.1.0",
    "boto3>=1.42.3",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "werkzeug>=3.1.3",
    "pillow>=12.0.0",
]
